# pipeline_de_dados

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
dashboard/: apresentacao.py
database/: db.py
ingestion/: ingestion.py  objeto.py
minio_data/.minio.sys/: format.json
minio_data/.minio.sys/tmp/.trash/020d3599-bf11-4c3c-aa04-25f1c1d592a2/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/02a43aa6-cf49-4879-8352-029888103831/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/02a66dd4-4a76-43e9-99df-12cf5eb29d37/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/04fc515e-b403-4ecd-8945-a08070a8cee1/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/0aa4b63c-ab6c-478f-91b3-c8d87d07832b/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/0abd9c9e-dc63-416e-a9cc-3b342abd9cf5/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/0b10ba41-6faa-4c95-af2c-47be56e987bf/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/0cbddf54-47f7-49d9-98f3-73a0e6495a07/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/0e1fadf0-3bf1-4619-aa1d-55eb66dd3b24/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/0fdacfef-37e0-40ec-8c40-5086e45f6f5a/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/148b1c04-f811-470e-b3d3-9850f369c67b/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/1497c9f8-1e88-4270-8994-0b29efe70b3f/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/15a0b9ed-762d-402f-a731-eff9162b1c8a/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/16ff1cbf-d6fc-4733-ab0f-3756adb3cc93/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/184a9fe8-29f1-42da-bb63-f7ef0693bdd4/: xl.meta.bkp
(+144 files in other folders)
